Fixed problem where dates were floating too high above h1.

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Cardo', serif;
+    font-size: 13pt;
+}
+
 .page-header {
     background-color: #47E1F5;
     margin-top: 0;
@@ -19,8 +24,10 @@ h1, h2, h3, h4 {
 }
 
 .date {
+    font-family: 'Cardo', serif;
     float: right;
     color: #828282;
+    margin-top: 20px;
 }
 
 .save {
